--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <a href="JoinVote.html" type="submit" class="btn btn-primary">Submit</a>
             <button type="reset" class="btn btn-danger">Reset</button>
             <br><br>
             <div class="form-group">
