--- a/thxvote.html
+++ b/thxvote.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 <center><h1><p class="bg-info text-white text-center">THANKS FOR YOUR VOTE</p></h1></center>
-<center><a href="home.html" class="btn btn-primary">FINISH</a></center>
+<center><a href="user.html" class="btn btn-primary">FINISH</a></center>
 </body>
 </html>
